fix alignment of catalog sort dropdown

--- a/frontend/public/components/catalog/_catalog.scss
+++ b/frontend/public/components/catalog/_catalog.scss
@@ -166,7 +166,7 @@ $catalog-tile-width: $co-m-catalog-tile-width;
   }
 
   &__sort {
-    display: inline-flex;
+    display: inline;
     margin-left: var(--pf-global--spacer--md);
   }
 
